// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopNext 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="desktopNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopPrevious 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="desktopPrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is desktopQuestion 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="desktopQuestion"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobileNext 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="mobileNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobilePrevious 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="mobilePrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is mobileQuestion 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="mobileQuestion"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletNext 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="tabletNext"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletPrevious 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="tabletPrevious"
>
  Button
</button>
`;

exports[`components:checkup:ProgressBar:Button matches the snapshot when format is tabletQuestion 1`] = `
<button
  className="sc-bdVaJa fsdfeo"
  format="tabletQuestion"
>
  Button
</button>
`;
